--- a/Messenger/Base.lproj/PeopleTab~.storyboard
+++ b/Messenger/Base.lproj/PeopleTab~.storyboard
@@ -6,11 +6,42 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Item-->
+        <scene sceneID="biw-hc-51H">
+            <objects>
+                <viewController id="kfK-0q-LVz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5YG-52-sLf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="4Ga-yh-eJZ"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="lx7-7E-2D5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bbx-0O-ARD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="462" y="839"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Uqu-AV-S9w">
+            <objects>
+                <viewController id="U35-iN-Lsb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jZv-ah-eBf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="V3K-7F-Umj"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="L2C-K9-lq9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aXH-2P-Rn4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1135" y="839"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="H9L-Ze-Pf1">
             <objects>
@@ -31,21 +62,7 @@
         <scene sceneID="yl2-sM-qoP">
             <objects>
                 <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="pVG-hL-EHk">
-                        <leftBarButtonItems>
-                            <barButtonItem title="P" image="first" width="40" id="rhz-te-K8W">
-                                <connections>
-                                    <segue destination="Lu8-V3-i1R" kind="show" id="Fsr-P5-pzT"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="Search" width="100" id="5ZV-3y-kuv">
-                                <connections>
-                                    <segue destination="Lu8-V3-i1R" kind="show" id="Nb6-G8-O4Z"/>
-                                </connections>
-                            </barButtonItem>
-                        </leftBarButtonItems>
-                        <barButtonItem key="rightBarButtonItem" title="Profile" id="hZ4-Ry-seu"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="pVG-hL-EHk"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -55,8 +72,8 @@
                         <segue destination="1DF-rv-L5Q" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="c02-gA-Z25" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="H2y-ZG-wKo" kind="relationship" relationship="viewControllers" id="br1-Mj-3oG"/>
-                        <segue destination="RVB-h8-uzA" kind="relationship" relationship="viewControllers" id="jiI-9y-glw"/>
-                        <segue destination="W5A-7j-MZa" kind="relationship" relationship="viewControllers" id="6n1-sI-0SI"/>
+                        <segue destination="U35-iN-Lsb" kind="relationship" relationship="viewControllers" id="jiI-9y-glw"/>
+                        <segue destination="kfK-0q-LVz" kind="relationship" relationship="viewControllers" id="6n1-sI-0SI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -71,29 +88,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MPV-uf-mXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="430" y="-288"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="X1a-93-ehn">
-            <objects>
-                <viewController id="Lu8-V3-i1R" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Htf-nf-5wD">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="QkY-24-Hy1">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="tfI-3E-Rgf"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Erx-st-yD9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-210" y="754"/>
+            <point key="canvasLocation" x="-1559.2" y="838.83058470764627"/>
         </scene>
         <!--PhoneTab-->
         <scene sceneID="stW-1Q-GGU">
@@ -103,7 +98,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LZK-C7-aiy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="433" y="-139"/>
+            <point key="canvasLocation" x="-905" y="840"/>
         </scene>
         <!--CameraTab-->
         <scene sceneID="UJK-bW-HHD">
@@ -113,33 +108,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0fm-gP-mKt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="430" y="-1"/>
-        </scene>
-        <!--PeopleTab-->
-        <scene sceneID="AfH-PK-KsT">
-            <objects>
-                <viewControllerPlaceholder storyboardName="PeopleTab" id="W5A-7j-MZa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="c35-cZ-3gm"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qlO-F0-Gdk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="426" y="148"/>
-        </scene>
-        <!--GamesTab-->
-        <scene sceneID="0aL-7u-G8F">
-            <objects>
-                <viewControllerPlaceholder storyboardName="GamesTab" id="RVB-h8-uzA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="3mc-FX-PDz"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="j0G-Aq-saB" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="436" y="287"/>
+            <point key="canvasLocation" x="-214" y="840"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="first" width="30" height="30"/>
-    </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="Nb6-G8-O4Z"/>
-    </inferredMetricsTieBreakers>
 </document>
