--- a/Messenger/HomeTab/View/MessagesTableViewContent/ActiveUsersCell/ActiveUsersInnerCells/ActiveUsersInnerCell.xib
+++ b/Messenger/HomeTab/View/MessagesTableViewContent/ActiveUsersCell/ActiveUsersInnerCells/ActiveUsersInnerCell.xib
@@ -26,7 +26,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SWA-Df-dqA">
                                 <rect key="frame" x="0.0" y="0.0" width="114" height="113"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ryh-3M-VLe">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ryh-3M-VLe">
                                         <rect key="frame" x="0.0" y="0.0" width="113" height="113"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ryh-3M-VLe" secondAttribute="height" multiplier="1:1" id="gQY-Vx-eH5"/>
