--- a/Messenger/Base.lproj/Main.storyboard
+++ b/Messenger/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ijZ-oD-gwD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ijZ-oD-gwD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -44,7 +45,11 @@
                                 </connections>
                             </barButtonItem>
                         </leftBarButtonItems>
-                        <barButtonItem key="rightBarButtonItem" title="Profile" id="hZ4-Ry-seu"/>
+                        <barButtonItem key="rightBarButtonItem" title="Profile" id="hZ4-Ry-seu">
+                            <connections>
+                                <segue destination="wIY-ul-nR7" kind="show" id="dkv-JC-kcF"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -63,6 +68,89 @@
             </objects>
             <point key="canvasLocation" x="-209" y="0.0"/>
         </scene>
+        <!--Me-->
+        <scene sceneID="hy7-AU-Iqo">
+            <objects>
+                <viewController title="Me" id="wIY-ul-nR7" customClass="ProfileVC" customModule="Messenger" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Yud-wo-FJL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zjO-D2-8eb" userLabel="Top View">
+                                <rect key="frame" x="0.0" y="64" width="375" height="160"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHT-ak-ecb">
+                                        <rect key="frame" x="127.5" y="20" width="120" height="120"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LED-bY-7Z6">
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OBr-VE-Vy8">
+                                                <rect key="frame" x="90" y="90" width="25" height="25"/>
+                                                <color key="backgroundColor" red="0.0" green="0.65828163291666675" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="25" id="Gbh-Fn-9uK"/>
+                                                    <constraint firstAttribute="height" constant="25" id="jP6-oH-SyF"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="OBr-VE-Vy8" secondAttribute="bottom" constant="5" id="3jq-uF-0Tg"/>
+                                            <constraint firstAttribute="height" constant="120" id="5hT-iW-Q7d"/>
+                                            <constraint firstAttribute="width" secondItem="OHT-ak-ecb" secondAttribute="height" multiplier="1:1" id="ZyU-Yv-1Jf"/>
+                                            <constraint firstAttribute="trailing" secondItem="OBr-VE-Vy8" secondAttribute="trailing" constant="5" id="c1C-Nr-pss"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="OHT-ak-ecb" firstAttribute="centerX" secondItem="zjO-D2-8eb" secondAttribute="centerX" id="dcG-yz-5fd"/>
+                                    <constraint firstAttribute="height" constant="160" id="gfW-2D-p0o"/>
+                                    <constraint firstItem="OHT-ak-ecb" firstAttribute="top" secondItem="zjO-D2-8eb" secondAttribute="top" constant="20" id="vHU-fC-jdA"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guq-Pp-kqh">
+                                <rect key="frame" x="87.5" y="209" width="200" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="nu4-sk-WAk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6yq-xR-bkd">
+                                <rect key="frame" x="0.0" y="238" width="375" height="429"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zjO-D2-8eb" firstAttribute="top" secondItem="DXo-NU-1cq" secondAttribute="top" id="2qr-hg-8yl"/>
+                            <constraint firstItem="guq-Pp-kqh" firstAttribute="top" secondItem="DXo-NU-1cq" secondAttribute="top" constant="145" id="C4U-QS-Zog"/>
+                            <constraint firstItem="6yq-xR-bkd" firstAttribute="centerX" secondItem="zjO-D2-8eb" secondAttribute="centerX" id="DvH-I8-6ng"/>
+                            <constraint firstAttribute="trailing" secondItem="zjO-D2-8eb" secondAttribute="trailing" id="Id1-Gb-skb"/>
+                            <constraint firstItem="guq-Pp-kqh" firstAttribute="centerX" secondItem="Yud-wo-FJL" secondAttribute="centerX" id="P9h-Ix-x8z"/>
+                            <constraint firstItem="6yq-xR-bkd" firstAttribute="trailing" secondItem="DXo-NU-1cq" secondAttribute="trailing" id="PMh-eE-C9r"/>
+                            <constraint firstItem="zjO-D2-8eb" firstAttribute="leading" secondItem="Yud-wo-FJL" secondAttribute="leading" id="Ufc-C8-9Qf"/>
+                            <constraint firstItem="6yq-xR-bkd" firstAttribute="leading" secondItem="DXo-NU-1cq" secondAttribute="leading" id="XUG-LK-glO"/>
+                            <constraint firstItem="6yq-xR-bkd" firstAttribute="bottom" secondItem="DXo-NU-1cq" secondAttribute="bottom" id="fcK-nc-SUC"/>
+                            <constraint firstItem="6yq-xR-bkd" firstAttribute="top" secondItem="guq-Pp-kqh" secondAttribute="bottom" constant="9" id="vOB-Gx-XPC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="DXo-NU-1cq"/>
+                    </view>
+                    <connections>
+                        <outlet property="activeView" destination="OBr-VE-Vy8" id="BYg-6e-Jna"/>
+                        <outlet property="optionTable" destination="6yq-xR-bkd" id="VSv-A7-vdw"/>
+                        <outlet property="profileImage" destination="LED-bY-7Z6" id="aRP-r1-Bkp"/>
+                        <outlet property="profileName" destination="guq-Pp-kqh" id="WOq-nZ-QA5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MAy-M3-xTX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="648.79999999999995" y="-742.5787106446777"/>
+        </scene>
         <!--HomeTab-->
         <scene sceneID="5hx-xv-6rm">
             <objects>
@@ -73,23 +161,26 @@
             </objects>
             <point key="canvasLocation" x="430" y="-288"/>
         </scene>
-        <!--View Controller-->
+        <!--SearchVC-->
         <scene sceneID="X1a-93-ehn">
             <objects>
-                <viewController id="Lu8-V3-i1R" sceneMemberID="viewController">
+                <viewController id="Lu8-V3-i1R" customClass="SearchVC" customModule="Messenger" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Htf-nf-5wD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="QkY-24-Hy1">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2jr-7Y-XBH">
+                                <rect key="frame" x="67" y="256" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="tfI-3E-Rgf"/>
                     </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="zLw-BN-hqI">
+                        <barButtonItem key="backBarButtonItem" title=" " id="E9k-LO-KIm"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Erx-st-yD9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
