--- a/Messenger/HomeTab/View/ActiveTableViewContent/ActiveUserCell.xib
+++ b/Messenger/HomeTab/View/ActiveTableViewContent/ActiveUserCell.xib
@@ -25,7 +25,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDr-l4-TMf">
                                 <rect key="frame" x="0.0" y="9.5" width="45" height="45"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K6w-8R-S7z">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K6w-8R-S7z">
                                         <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.48787274739999997" green="0.85633150079999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
