--- a/Messenger/HomeTab/View/HomeTab.storyboard
+++ b/Messenger/HomeTab/View/HomeTab.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -151,11 +150,12 @@
                                                         </collectionView>
                                                     </subviews>
                                                 </view>
+                                                <color key="backgroundColor" red="0.48787274739999997" green="0.85633150079999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstItem="CX2-gx-eNH" firstAttribute="bottom" secondItem="31p-y8-YhM" secondAttribute="bottomMargin" id="YuE-ju-AKm"/>
-                                                    <constraint firstItem="CX2-gx-eNH" firstAttribute="top" secondItem="31p-y8-YhM" secondAttribute="topMargin" id="g6U-SX-2gl"/>
-                                                    <constraint firstItem="CX2-gx-eNH" firstAttribute="leading" secondItem="31p-y8-YhM" secondAttribute="leadingMargin" id="gW3-Gu-wuC"/>
-                                                    <constraint firstItem="CX2-gx-eNH" firstAttribute="trailing" secondItem="31p-y8-YhM" secondAttribute="trailingMargin" id="nae-Fk-FY7"/>
+                                                    <constraint firstAttribute="bottom" secondItem="CX2-gx-eNH" secondAttribute="bottom" id="28c-aX-rS7"/>
+                                                    <constraint firstAttribute="trailing" secondItem="CX2-gx-eNH" secondAttribute="trailing" id="2Za-eP-VjD"/>
+                                                    <constraint firstItem="CX2-gx-eNH" firstAttribute="leading" secondItem="31p-y8-YhM" secondAttribute="leading" id="9do-gp-zR4"/>
+                                                    <constraint firstItem="CX2-gx-eNH" firstAttribute="top" secondItem="31p-y8-YhM" secondAttribute="top" id="Aiu-KV-dXG"/>
                                                 </constraints>
                                                 <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                                                 <size key="customSize" width="239" height="139"/>
